--- a/about.html
+++ b/about.html
@@ -8,25 +8,25 @@
     <title>Jason Platte Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Inter', sans-serif;
-        }
-        .nav-glow:hover {
-            text-shadow: 0 0 12px rgba(52, 211, 153, 0.6);
-            color: white;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
+
 </head>
 <body class="bg-black text-white">
 
-    <header class="py-8 text-center" style="background-color: #202123;">
-        <h1 class="text-2xl font-extrabold tracking-wide">Jason Platte</h1>
-        <nav class="mt-4 flex justify-center space-x-8 text-4xl text-gray-500">
-            <a href="index.html" class="nav-glow">Games</a>
-            <a href="code.html" class="nav-glow">Code</a>
-            <a href="about.html" class="nav-glow">About</a>
+    <header class="py-6 text-center relative shadow-lg"
+            style="background-color:#202123;">
+        <h1 class="text-2xl font-extrabold tracking-wide text-white">Jason Platte</h1>
+
+        <nav class="mt-3 flex justify-center space-x-8 text-2xl md:text-3xl text-gray-400">
+            <a href="index.html" class="nav-link nav-glow">Games</a>
+            <a href="code.html" class="nav-link nav-glow">Code</a>
+            <a href="about.html" class="nav-link active">About</a>
         </nav>
+
+        <!-- gradient divider line -->
+        <div class="h-px w-full mt-5"
+             style="background: linear-gradient(90deg, transparent, rgba(52,211,153,0.55), rgba(34,211,238,0.45), transparent);">
+        </div>
     </header>
 
     <section class="py-16 px-4 bg-[#1a1a1a]">
@@ -34,12 +34,11 @@
             <div>
 
                 <h2 class="text-3xl font-bold mb-6 text-green-400">About Me</h2>
-                <p class="text-white text-xl font-semibold mb-2">
-                    Hi I am Jason Platte. I am a recent graduate in my early career looking for entry level SWE or Game Development positions. I prefer locations closer to my family
-                    in Northern California but I am open to opportunities further away as well!
+                <p class="text-gray-300 leading-relaxed text-lg">
+                    Hi I am a recent graduate in my early career looking for entry level Game Development positions. I'm especially interested in Gameplay Engineering, Tech Design, and Tech Art. I prefer locations closer to the Bay Area but I am open to opportunities further away as well!
                 </p>
-                <p class="text-white text-xl font-semibold mb-2">
-                    In my free time I like to play competitive overwatch, do 3D printing, and learn new skills. I am currently working on passion projects with my recently graduated peers. Some of my all time favorite games include Ark, Overwatch, Wizard101, Destiny, Halo Reach, Elden Ring, Escape the Backrooms, and ESO. 
+                <p class="text-gray-300 leading-relaxed text-lg">
+                    I am currently working on passion projects with my recently graduated peers to further my career. In my free time I am working on developing interview skills and other programming related skills that will be useful to me in my career. Some of my all time favorite games include Ark, Overwatch, Destiny, Halo Reach, Elden Ring, Escape the Backrooms, and ESO.
                 </p>
             </div>
         </div>
@@ -70,7 +69,12 @@
             </div>
 
             <!-- Profile Photo -->
-            <img src="portrait.png" alt="Jason Platte" class="w-48 h-48 rounded-full object-cover shadow-lg">
+            <div class="flex justify-center md:justify-end">
+                <div class="pfp-wrap">
+                    <div class="pfp-glow"></div>
+                    <img src="portrait.png" alt="Profile Photo" class="pfp-img">
+                </div>
+            </div>
 
         </div>
     </section>
