--- a/index.html
+++ b/index.html
@@ -6,87 +6,25 @@
     <title>Jason Platte Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Inter', sans-serif;
-        }
-
-        body {
-            font-family: 'Inter', sans-serif;
-        }
-
-        .nav-glow:hover {
-            text-shadow: 0 0 12px rgba(52, 211, 153, 0.6);
-            color: white;
-        }
-
-        /* Purple outline + glow for cards */
-        .glow-card {
-            border: 1px solid rgba(52, 211, 153, 0.25); 
-            transition: transform 200ms ease, box-shadow 200ms ease, border-color 200ms ease;
-        }
-
-        .glow-card:hover {
-            border-color: rgba(52, 211, 153, 0.85);
-            box-shadow: 0 0 0 1px rgba(52, 211, 153, 0.18), 0 0 18px rgba(52, 211, 153, 0.35), 0 0 48px rgba(52, 211, 153, 0.22);
-           transform: translateY(-4px) scale(1.02);
-        }
-        .meta-row {
-            display: flex;
-            gap: 14px;
-            align-items: center;
-            margin-top: 10px;
-            margin-bottom: 10px;
-            color: rgba(148, 163, 184, 0.95); 
-            font-size: 12px;
-        }
-
-        .meta-item {
-            display: inline-flex;
-            gap: 6px;
-            align-items: center;
-        }
-
-            .meta-item svg {
-                width: 14px;
-                height: 14px;
-                opacity: 0.8;
-            }
-
-        /* Skill badges */
-        .badges {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 8px;
-        }
-
-        .badge {
-            display: inline-flex;
-            align-items: center;
-            padding: 4px 10px;
-            border-radius: 8px;
-            border: 1px solid rgba(148, 163, 184, 0.25);
-            background: rgba(15, 23, 42, 0.55); 
-            color: rgba(226, 232, 240, 0.9);
-            font-size: 12px;
-            line-height: 1;
-        }
-        .glow-card:hover .badge {
-            border-color: rgba(52, 211, 153, 0.35);
-        }
-
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body class="bg-black text-white">
 
-    <header class="py-8 text-center" style="background-color: #202123;">
-        <h1 class="text-2xl font-extrabold tracking-wide">Jason Platte</h1>
-        <nav class="mt-4 flex justify-center space-x-8 text-4xl text-gray-500">
-            <a href="index.html" class="nav-glow">Games</a>
-            <a href="code.html" class="nav-glow">Code</a>
-            <a href="about.html" class="nav-glow">About</a>
+    <header class="py-6 text-center relative shadow-lg"
+            style="background-color:#202123;">
+        <h1 class="text-2xl font-extrabold tracking-wide text-white">Jason Platte</h1>
+
+        <nav class="mt-3 flex justify-center space-x-8 text-2xl md:text-3xl text-gray-400">
+            <a href="index.html" class="nav-link active">Games</a>
+            <a href="code.html" class="nav-link nav-glow">Code</a>
+            <a href="about.html" class="nav-link nav-glow">About</a>
         </nav>
+
+        <!-- gradient divider line -->
+        <div class="h-px w-full mt-5"
+             style="background: linear-gradient(90deg, transparent, rgba(52,211,153,0.55), rgba(34,211,238,0.45), transparent);">
+        </div>
     </header>
 
     <!-- Project Gallery -->
@@ -96,13 +34,27 @@
 
             <!-- Project Card: Summit -->
             <a href="summit.html" class="glow-card block bg-gray-800 rounded overflow-hidden">
-                <img src="ss15.png" alt="Summit" class="w-full h-48 object-cover">
+
+                <!-- IMAGE (default) -> VIDEO (on hover) -->
+                <div class="card-media relative h-48 overflow-hidden">
+                    <img src="ss15.png" alt="Summit" class="card-poster w-full h-full object-cover">
+
+                    <video class="card-video absolute inset-0 w-full h-full object-cover"
+                           muted
+                           playsinline
+                           loop
+                           preload="metadata">
+                        <source src="videos/summitdemo.mp4" type="video/mp4">
+                    </video>
+                </div>
+
                 <div class="p-4">
                     <!-- Title + Year -->
                     <div class="flex items-center justify-between">
                         <h3 class="text-xl font-semibold">Summit</h3>
                         <span class="text-gray-500 text-sm">2025</span>
                     </div>
+
                     <!-- Team size + Duration -->
                     <div class="meta-row">
                         <span class="meta-item">
@@ -132,9 +84,21 @@
                 </div>
             </a>
 
+
             <!-- Project Card: The Bookstore -->
             <a href="bookstore.html" class="glow-card block bg-gray-800 rounded overflow-hidden">
-                <img src="ss7.jpg" alt="The Bookstore" class="w-full h-48 object-cover">
+                <!-- IMAGE (default) -> VIDEO (on hover) -->
+                <div class="card-media relative h-48 overflow-hidden">
+                    <img src="ss7.jpg" alt="Summit" class="card-poster w-full h-full object-cover">
+
+                    <video class="card-video absolute inset-0 w-full h-full object-cover"
+                           muted
+                           playsinline
+                           loop
+                           preload="metadata">
+                        <source src="videos/bookstoredemo.mp4" type="video/mp4">
+                    </video>
+                </div>
                 <div class="p-4">
                     <div class="flex items-center justify-between">
                         <h3 class="text-xl font-semibold">The Bookstore</h3>
@@ -170,7 +134,18 @@
 
             <!-- Project Card: Deep Containment -->
             <a href="deepcontainment.html" class="glow-card block bg-gray-800 rounded overflow-hidden">
-                <img src="ss6.PNG" alt="Deep Containment" class="w-full h-48 object-cover">
+                <!-- IMAGE (default) -> VIDEO (on hover) -->
+                <div class="card-media relative h-48 overflow-hidden">
+                    <img src="ss6.png" alt="Summit" class="card-poster w-full h-full object-cover">
+
+                    <video class="card-video absolute inset-0 w-full h-full object-cover"
+                           muted
+                           playsinline
+                           loop
+                           preload="metadata">
+                        <source src="videos/deepdemo.mp4" type="video/mp4">
+                    </video>
+                </div>
                 <div class="p-4">
                     <div class="flex items-center justify-between">
                         <h3 class="text-xl font-semibold">Deep Containment</h3>
@@ -243,7 +218,17 @@
 
             <!-- Project Card: Art House -->
             <a href="arthouse.html" class="glow-card block bg-gray-800 rounded overflow-hidden">
-                <img src="ss8.jpg" alt="Art House" class="w-full h-48 object-cover">
+                <div class="card-media relative h-48 overflow-hidden">
+                    <img src="ss8.jpg" alt="Summit" class="card-poster w-full h-full object-cover">
+
+                    <video class="card-video absolute inset-0 w-full h-full object-cover"
+                           muted
+                           playsinline
+                           loop
+                           preload="metadata">
+                        <source src="videos/artdemo.mp4" type="video/mp4">
+                    </video>
+                </div>
                 <div class="p-4">
                     <div class="flex items-center justify-between">
                         <h3 class="text-xl font-semibold">Art House</h3>
@@ -307,6 +292,27 @@
 
                 card.addEventListener('mouseleave', () => {
                     card.style.transform = '';
+                });
+            });
+        });
+    </script>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            document.querySelectorAll('.glow-card').forEach(card => {
+                const vid = card.querySelector('.card-video');
+                if (!vid) return;
+
+                card.addEventListener('mouseenter', async () => {
+                    try {
+                        vid.currentTime = 0;
+                        await vid.play();
+                    } catch (e) { }
+                });
+
+                card.addEventListener('mouseleave', () => {
+                    vid.pause();
+                    vid.currentTime = 0;
                 });
             });
         });
