--- a/summit.html
+++ b/summit.html
@@ -6,25 +6,25 @@
     <title>Jason Platte Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Inter', sans-serif;
-        }
-        .nav-glow:hover {
-            text-shadow: 0 0 12px rgba(52, 211, 153, 0.6);
-            color: white;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
+
 </head>
 <body class="bg-black text-white">
 
-    <header class="py-8 text-center" style="background-color: #202123;">
-        <h1 class="text-2xl font-extrabold tracking-wide">Jason Platte</h1>
-        <nav class="mt-4 flex justify-center space-x-8 text-4xl text-gray-500">
-            <a href="index.html" class="nav-glow">Games</a>
-            <a href="code.html" class="nav-glow">Code</a>
-            <a href="about.html" class="nav-glow">About</a>
+    <header class="py-6 text-center relative shadow-lg"
+            style="background-color:#202123;">
+        <h1 class="text-2xl font-extrabold tracking-wide text-white">Jason Platte</h1>
+
+        <nav class="mt-3 flex justify-center space-x-8 text-2xl md:text-3xl text-gray-400">
+            <a href="index.html" class="nav-link nav-glow">Games</a>
+            <a href="code.html" class="nav-link nav-glow">Code</a>
+            <a href="about.html" class="nav-link nav-glow">About</a>
         </nav>
+
+        <!-- gradient divider line -->
+        <div class="h-px w-full mt-5"
+             style="background: linear-gradient(90deg, transparent, rgba(52,211,153,0.55), rgba(34,211,238,0.45), transparent);">
+        </div>
     </header>
 
     <main class="max-w-5xl mx-auto p-8 space-y-8">
